# rustgb

./: Cargo.toml  README.md
docs/: design-decisions.md
examples/: cmp_probe.rs  compute_gb.rs  gm_bench.rs  kbucket_bench.rs  mul_probe.rs  perf_cyclic5.rs  sanity.rs
include/: rustgb.h
src/: bba.rs  bset.rs  computation.rs  ffi.rs  field.rs  gm.rs  kbucket.rs  lib.rs  lobject.rs  lset.rs  lset_flat.rs  monomial.rs  ordering.rs  pair.rs  parallel.rs  poly.rs  reducer.rs  ring.rs  sbasis.rs  simd.rs
src/poly/: mod.rs  node_pool.rs  poly_list.rs  poly_vec.rs
tests/: bba_fixtures.rs  bba_props.rs  cancel.rs  ffi.rs  field_props.rs  gm_props.proptest-regressions  gm_props.rs  kbucket_props.rs  lset_contract.rs  lset_props.rs  monomial_props.proptest-regressions  monomial_props.rs  poly_props.rs  sbasis_props.rs
tests/fixtures/: cyclic-3.gb.txt  cyclic-4.gb.txt  cyclic-5.gb.txt  katsura-3.gb.txt
