[package]
name = "rustgb"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Groebner basis engine for Singular (polynomial layer only -- see ~/project/docs/rust-bba-port-plan.md)"

[lib]
# `cdylib` produces librustgb.so for the Singular dyn_module to
# dlopen / link against; `rlib` keeps the crate usable as a normal
# Rust dependency for tests and examples.
crate-type = ["cdylib", "rlib"]

[dependencies]
# stdlib only for now; add as needed.

[features]
# Default reducer is the geobucket (ADR-002). Enabling this feature
# switches `bba::reduce_lobject` to the heap-based Monagan-Pearce
# reducer (ADR-008). Both reducers are always compiled; the flag
# only chooses which one bba uses internally. Cross-validation
# tests in `bba` always exercise both regardless of flag state.
heap_reducer = []

[dev-dependencies]
proptest = "1"

# Sanitisers are available only with `-Z sanitizer=thread` on nightly.
# No build configuration needed in Cargo.toml.

[profile.release]
debug = true   # keep symbols for profiling
